# TinyRenderer-IMGUI

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: App.h  resource.h
engine/include/editor/: Window.h  WindowMsgMap.h
engine/include/editor/win/: Window.h
engine/include/exceptions/: EngineException.h  WindowException.h
engine/include/graphics/win/: Graphics.h
engine/include/inputs/: Keyboard.h  Mouse.h
engine/include/tools/: Timer.h
engine/include/win/exceptions/: WindowException.h
engine/shaders/: Basic.hlsli  DefaultCutoutPixelShader.hlsl  DefaultPixelShader.hlsl  DefaultTransparentPixelShader.hlsl  DefaultVertexShader.hlsl  ErrorPixelShader.hlsl  ErrorVertexShader.hlsl  Lambert.hlsli  Math.hlsli  PBR.hlsli  PhongPS.hlsl  PickPS.hlsl  PixelShader.hlsl  Shadow.hlsli  SkyBoxPS.hlsl  SkyBoxVS.hlsl  TexPixelShader.hlsl  UnlitPixelShader.hlsl  VertexShader.hlsl
engine/shaders/effects/: BlitPS.hlsl  BlurPS.hlsl  FullScreenVS.hlsl  MaskPS.hlsl  OutlinePS.hlsl  PointShadowPS.hlsl  PointShadowVS.hlsl  ShadowPS.hlsl  ShadowVS.hlsl
engine/shaders/tools/: brdfPS.hlsl  brdfVS.hlsl  cubemapPS.hlsl  cubemapVS.hlsl  irradiancePS.hlsl  prefilterPS.hlsl
engine/source/: CMakeLists.txt  link_dependencies.cmake
engine/source/common/: Color.h  Log.h  SampleMode.h  TextureFormat.h  Tools.cpp  Tools.h  settings.h
engine/source/editor/: App.cpp  App.h  EditorGlobalContext.cpp  EditorGlobalContext.h  EditorInputManager.cpp  EditorInputManager.h  EditorSceneManager.cpp  EditorSceneManager.h  EditorUI.cpp  EditorUI.h  Window.cpp  Window.h  editor.cpp  editor.h  main.cpp
engine/source/runtime/: engine.cpp  engine.h
engine/source/runtime/core/: EngineException.cpp  EngineException.h  GameObject.cpp  GameObject.h  Graphics.h  Singleton.h  Transform.cpp  Transform.h  Window.h
engine/source/runtime/core/base/: macro.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: EngineMath.h  Matrix.cpp  Matrix.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
engine/source/runtime/framework/behaviours/: Behaviour.h  CamController.h  FrustumTest.h  GameController.h  LightController.h  Rotater.h  behaviours.h
engine/source/runtime/framework/components/: Camera.cpp  Camera.h  Component.cpp  Light.cpp  Light.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h  components.h
engine/source/runtime/framework/effect/: Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  EffectPass.cpp  EffectPass.h  Pass.cpp  Pass.h  RenderResource.h  Stencil.h
engine/source/runtime/framework/object/: GameObject.cpp  GameObject.h
engine/source/runtime/framework/scene/: BVH.cpp  BVH.h  Frustum.cpp  Frustum.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.h
engine/source/runtime/framework/world/: Level.cpp  Level.h  WorldManager.cpp  WorldManager.h
engine/source/runtime/function/behaviours/: Behaviour.h  CamController.h  GameController.h  LightController.h  Rotater.h
engine/source/runtime/function/components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Light.cpp  Light.h  Renderer.cpp  Renderer.h  Rotater.h  Transform.cpp  Transform.h
engine/source/runtime/function/graphics/: BufferResource.h  DepthStencil.h  Graphics.cpp  Graphics.h  RenderTarget.h
engine/source/runtime/function/input/: Input.h  KeyCode.h  Keyboard.h  Mouse.h
engine/source/runtime/function/renderer/: Camera.cpp  Camera.h  FrameBuffer.h  Graphics.cpp  Graphics.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  RenderCamera.h  RenderContext.h  RenderEntity.h  RenderQueueManager.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderDesc.cpp  ShaderDesc.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UniformVar.h  Window.cpp  Window.h
engine/source/runtime/function/renderer/graph/: Attachment.h  Registry.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  RenderResource.h  SinkAttachment.h  SourceAttachment.h  attachments.h
engine/source/runtime/function/renderer/managers/: MaterialManager.cpp  MaterialManager.h  RenderQueueManager.cpp  RenderQueueManager.h
engine/source/runtime/function/renderer/shader_utils/: DynamicCBuffer.cpp  DynamicCBuffer.h  Layout.cpp  Layout.h
engine/source/runtime/function/ui/: GUI.h  WindowUI.cpp  WindowUI.h
engine/source/runtime/geometry/: Bounds.cpp  Bounds.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  geometries.h
engine/source/runtime/global/: RuntimeGlobalContext.cpp  RuntimeGlobalContext.h
engine/source/runtime/primitives/: Cube.cpp  Cube.h  Primitive.cpp  Primitive.h  Triangle.cpp  Triangle.h
engine/source/runtime/resource/res_type/: common.h
engine/source/runtime/surfaces/: Surface.cpp  Surface.h  SurfaceUI.cpp  SurfaceUI.h
engine/src/: App.cpp
engine/src/editor/win/: Window.cpp  WindowMsgMap.cpp
engine/src/exceptions/: EngineException.cpp
engine/src/graphics/win/: Graphics.cpp
engine/src/tools/: Timer.cpp
engine/src/win/: main.cpp
engine/src/win/editor/: Window.cpp  WindowException.cpp
